--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-This Project elixir gsi is from official project elixir website
+This Project elixir gsi is from official project elixir website.
+I made github version for custom rom builder Samsung m11q and a11q
+I'm gonna port any custom rom for m11q/a11q
